FIX SCROLL ON MOBILE

--- a/docs/Style-portfolio.css
+++ b/docs/Style-portfolio.css
@@ -10,7 +10,6 @@
 }
 body {
   font-family: 'Poppins', sans-serif;
-  overflow: hidden;
 }
 .accueil-container {
   display: flex;
@@ -96,7 +95,7 @@ body {
   transform: translateY(0) rotate(-45deg);
 }
 .three {
-  transform: translateY(-6px) rotate(45deg);
+  transform: translateY(-5px) rotate(45deg);
 }
 
 .photo-de-profil {
@@ -185,14 +184,16 @@ body {
     width: 100%;
     height: 88vh;
     display: flex;
+
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    position: absolute;
+    position: fixed;
     right: -100%;
     transition: 0.8s;
   }
   .mobile-menu-open {
+    transition: 0.8s cubic-bezier(0, 0, 0.2, 1);
     right: 0;
   }
   .about-button {
